crates/service/tests/code_action/snapshots/features__code_action__expand_ref_type__funcref.snap
---
source: crates/service/tests/code_action/expand_ref_type.rs
expression: response
---
[
  {
    "title": "Expand `funcref`",
    "kind": "refactor.rewrite",
    "edit": {
      "changes": {
        "untitled:test": [
          {
            "range": {
              "start": {
                "line": 2,
                "character": 15
              },
              "end": {
                "line": 2,
                "character": 22
              }
            },
            "newText": "(ref null func)"
          }
        ]
      }
    }
  }
]
