crates/service/tests/code_action/snapshots/features__code_action__expand_ref_type__nullfuncref.snap
---
source: crates/service/tests/code_action/expand_ref_type.rs
expression: response
---
[
  {
    "title": "Expand `nullfuncref`",
    "kind": "refactor.rewrite",
    "edit": {
      "changes": {
        "untitled:test": [
          {
            "range": {
              "start": {
                "line": 2,
                "character": 15
              },
              "end": {
                "line": 2,
                "character": 26
              }
            },
            "newText": "(ref null nofunc)"
          }
        ]
      }
    }
  }
]
